<resources>
    <string name="app_name">Kotha Bondhu</string>
    <!--<string name="title_activity_home_tabbed">Kotha Bondhu</string>-->
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="agents_tab">Agents</string>
    <string name="log_tab">Calls</string>
    <string name="my_account_tab">My account</string>
    <string name="packages_tab">Packages</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Agent name</string>
    <string name="package_dialog_title">Select your package</string>
    <string name="package_dialog_toast">Select your package to call!</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>
    <!--Pending Messages-->
    <string name="progress_dialog_loading">Loading</string>
    <!--Error Messages-->
    <string name="dialog_error">Error</string>
    <!--Success Messages-->
    <string name="dialog_success">Success</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_packages">Packages</string>
    <string name="nav_item_my_account">My Account</string>
    <string name="nave_item_beauty_tips">Beauty Tips</string>
    <string name="nav_item_love_tips">Love Tips</string>
    <string name="nav_item_jokes">Jokes</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_about">About</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="media_url_mp3">http://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <string name="media_url_mp4">http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[http://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="media_url_youtube">https://youtu.be/08h0IVs4RKQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_phone_verify">PhoneVerifyActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="continue_button">CONTINUE</string>
    <string name="category">Category</string>
    <string name="amount_40">We will be charge 40 Tk from your balance for your desire package purchase. After purchasing this package you will get 20 minutes into your kotha bondhu app balance. After successful purchase there is no refund policy. Minute will be deduct automatically from your kotha bondu app balance after talk with our agent. This is not a recurring charge. You need to buy package again after finish your app minute balance.  </string>
    <string name="amount_100">We will be charge 100 Tk from your balance for your desire package purchase. After purchasing this package you will get 50 minutes into your kotha bondhu app balance. After successful purchase there is no refund policy. Minute will be deduct automatically from your kotha bondu app balance after talk with our agent. This is not a recurring charge. You need to buy package again after finish your app minute balance.  </string>
    <string name="amount_190">We will be charge 190 Tk from your balance for your desire package purchase. After purchasing this package you will get 100 minutes into your kotha bondhu app balance. After successful purchase there is no refund policy. Minute will be deduct automatically from your kotha bondu app balance after talk with our agent. This is not a recurring charge. You need to buy package again after finish your app minute balance.  </string>
    <string name="amount_380">We will be charge 380 Tk from your balance for your desire package purchase. After purchasing this package you will get 200 minutes into your kotha bondhu app balance. After successful purchase there is no refund policy. Minute will be deduct automatically from your kotha bondu app balance after talk with our agent. This is not a recurring charge. You need to buy package again after finish your app minute balance.  </string>
    <string name="_20_min_40_tk">20 min / 40 Tk</string>
    <string name="what_is_kotha_bondhu">What is Kotha Bondhu:</string>
    <string name="kotha_bondhu_is_a">\u0020\u0020Kotha Bondhu is a supportive apps for it’s users. User can get information from this app. This is a voice interactive app. User can connect with our real customer care executive by this app.</string>
    <string name="what_information_user_will_get">What information user will get:</string>
    <string name="user_will_get_online_support">\u0020User will get online support for various matters like travel information, Nutrition tips, Beauty Tips, Cooking Tips etc. Also user can do interceptive voice chat with our customer care agent directly.</string>
    <string name="payment">Payment:</string>
    <string name="user_have_to_pay_for_our_support">\u0020User have to pay for our support. We will charge for every single minute. Customs have to by minute from us using local and international payment gateway.</string>
    <string name="how_to_pay">How to Pay:</string>
    <string name="user_can_buy_minute_by">\u0020User can buy minute by clicking into package tab. User can purchase desire package according to our given package option.</string>
    <string name="test_text">–4,\u00205,\u0020–5,\u00206,\u0020–6</string>
    <string name="bangla_text">আপনার প্রয়োজনীয় সাহায্য চাইতে পারেন</string>
    <string name="bangla_text_second">কথাবন্ধুর অভিজ্ঞ টীম আপনাকে যেকোনো সাহায্য করতে প্রস্তুত। এটি ব্যবহার নিরাপদ এবং সহজ।</string>
    <string name="login_register_bangla">লগইন অথবা রেজিস্ট্রেশন করুন</string>
    <string name="back_bangla"> &#x25c0; ফিরে আসুন </string>
    <string name="ghure_dekhun">ঘুরে দেখুন &#x25ba;</string>
    <string name="proyojon_nei">&#x2718; প্রয়োজন নেই</string>
    <string name="somporko">সম্পর্ক</string>
    <string name="valobashar_kothamala">ভালোবাসার কথামালা</string>
    <string name="premer_somporko">প্রেমের সম্পর্ক</string>
    <string name="nijer_unnoti">নিজের উন্নতি</string>
    <string name="sondorjo_tok">সৌন্দর্য ও ত্বক</string>
    <string name="sadharon_sastho">সাধারণ স্বাস্থ্য</string>
    <string name="ki_paben">কথা বন্ধুতে আপনি কি পাবেন ?</string>
    <string name="vromon">ভ্রমণ</string>
    <string name="bujte_peresi">আচ্ছা, বুজতে পেরেছি </string>
    <string name="mon_khule_kotha_bolun">মন খুলে আমাদের সদস্যদের সাথে কথা বলুন!</string>
    <string name="pochonder_package_kinun">এইখান থেকে আপনি আপনার পছন্দের প্যাকেজ কিনুন</string>
    <string name="ekhane_sokol_tottho_paben">এইখানে আপনার সকল তথ্য দেখতে পারেন</string>
    <string name="cholun_suru_kora_jak">চলুন শুরু করা যাক</string>
    <string name="thik_ase">ঠিক আছে</string>
    <string name="druto_kotha_bolun">দ্রুত উত্তর পেতে কথা বলুন</string>
    <string name="sagotom">কথাবন্ধুতে আপনাকে স্বাগতম</string>
    <string name="pochonder_nirbachon">পছন্দের বিষয় নির্বাচন করুন</string>
    <string name="dhonnobad">আমাদের সাথে যুক্ত হবার জন্য ধন্যবাদ। আমাদের সেবা সম্পর্কে জানতে আপনি “ঘুরে দেখুন” অপশন দেখতে পারেন। কথা বন্ধু হলো এটির ব্যবহারকারীদের জন্য একটি সহায়ক অ্যাপস। ব্যবহারকারীগন  এই অ্যাপস থেকে বিভিন্ন তথ্য পাবেন। এটি একটি ভয়েস ইন্টারেক্টিভ অ্যাপস। ব্যবহারকারীরা আমাদের অভিজ্ঞ টীম মেম্বার এর সাথে সরাসরি কথা বলে দ্রুত সেবা নিতে পারবেন।</string>
    <string name="home_fab_button">Home</string>
    <string name="nav__item_call">Call</string>
    <string name="posondr_bisoy">&#x25c0; পছন্দের বিষয়</string>
    <string name="login_with_gmail_button">\u0020\u0020 Sign Up with Google</string>
    <string name="pay_success_report">Congratulations Payment Successfull</string>
    <string name="aamarpay_logo">aamarpay_logo</string>
    <string name="customer_name">Customer Name</string>
    <string name="aamarpay_test_payment">aamarPay Test Payment</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_mobile_number">Customer Mobile Number</string>
    <string name="customer_address">Customer Address</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="currency_name">Currency Name</string>
    <string name="customer_city">Customer City</string>
    <string name="customer_country">Customer Country</string>
    <string name="payment_description">Payment Description</string>
    <string name="pay_bdt_10">Pay BDT 10</string>
    <string name="try_again">Try Again</string>
    <string name="packageText">PACKAGE</string>
    <string name="facebook_app_id">519882759162611</string>
    <string name="fb_login_protocol_scheme">fb519882759162611</string>
    <string name="নির্দেশনা"> নির্দেশনা  </string>
    <string name="বর্ণনা">আমাদের কাষ্টোমার কেয়ার প্রতিনিধিদের সাথে কথা বলার জন্য আপনার পছন্দের প্যাকেজটি
        নির্বাচন করুন এবং আপনার পছন্দের যে কোন ব্যাংকিং সার্ভিস যেমন বিকাশ, নগদ, রকেট অথবা মাস্টার কার্ডের মাধ্যমে পেমেন্ট সম্পূর্ণ করুন।</string>
    <string name="AmarPay_SignatureKey">b1a37fb12afb8571fe11a485349d99aa</string>
</resources>
