<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/nav_item_home"
        android:icon="@drawable/home"
        android:id="@+id/bottom_home"/>


    <item
        android:title = "@string/nav__item_dailer"
        android:icon="@drawable/ic_call_home"
        android:id="@+id/bottom_dailer"
        />

    <!--<item
        android:title="@string/nav_item_settings"
        android:icon="@drawable/setting"
        android:id="@+id/bottom_settings"/>-->

    <item
        android:title="@string/nav_item_packages"
        android:icon="@drawable/subscription"
        android:id="@+id/bottom_package"/>

    <item
        android:title="@string/nav_item_my_account"
        android:icon="@drawable/my_account"
        android:id="@+id/bottom_my_account"/>

    <item
        android:title="@string/category"
        android:icon="@drawable/ic_cat_bottom"
        android:id="@+id/bottom_category" />

</menu>