<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AboutActivity">

    <ScrollView
        android:id="@+id/scrollViewAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_regular"
                android:text="@string/what_is_kotha_bondhu"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:fontFamily="@font/baloo_regular"
                android:text="@string/kotha_bondhu_is_a"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text2"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/baloo_regular"
                android:text="@string/what_information_user_will_get"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text3"
                android:fontFamily="@font/baloo_regular"
                android:text="@string/user_will_get_online_support"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text4"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/baloo_regular"
                android:text="@string/payment"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text5"
                android:fontFamily="@font/baloo_regular"
                android:text="@string/user_have_to_pay_for_our_support"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text6"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/baloo_regular"
                android:text="@string/how_to_pay"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text7"
                android:fontFamily="@font/baloo_regular"
                android:text="@string/user_can_buy_minute_by"
                android:textColor="@color/black" />


        </RelativeLayout>


    </ScrollView>

    <Button
        android:id="@+id/buttonContinueAbout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/c_button"
        android:text="@string/continue_button"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>