<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sagotom_small_third"
        android:scaleType="fitXY"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSagotom"
            android:text="@string/sagotom"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_below="@id/textViewSagotom"
            android:lineSpacingMultiplier="1.0"
            android:includeFontPadding="false"
            android:text="@string/dhonnobad" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/buttonNotNeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/c_button"
            android:text="@string/proyojon_nei"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold" />



        <Button
            android:id="@+id/buttonTour"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/for_proyojon_button"
            android:text="@string/ghure_dekhun"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>



</RelativeLayout>