<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:id="@+id/packageFragmentImageView"
        android:src="@drawable/package_scr_shot"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pochonder_package_kinun"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        android:layout_below="@id/packageFragmentImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/buttonBackPackage"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/c_button"
            android:text="@string/back_bangla"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonUnderstandPackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/c_button"
            android:text="@string/bujte_peresi"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>