<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/vector_message"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mon_khule_kotha_bolun"
        android:layout_centerHorizontal="true"
        android:id="@+id/monkhuleTextView"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/agentFragmentImageView"
        android:layout_width="367dp"
        android:layout_height="493dp"
        android:layout_below="@+id/monkhuleTextView"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/agent_scr_shot_second" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/buttonBackAgent"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/c_button"
            android:text="@string/back_bangla"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/solaiman_lipi"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonUnderstandAgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/c_button"
            android:text="@string/bujte_peresi"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:fontFamily="@font/solaiman_lipi"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>